# servc-python

./: .coveragerc  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  shields.json  start.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  claude.yml  commit.yml  dependabot-auto-merge.yml  lint.yml  mirror.yml  publish.yml  pypi.yml  servc.yml  test.yml  unittests.yml  version.yml
servc/: __main__.py  server.py  util.py
servc/cli/: __init__.py  config.py
servc/cli/commands/: __init__.py
servc/cli/commands/init/template_poetry/: .gitignore  README.md  pyproject.toml
servc/cli/commands/init/template_poetry/src/: __init__.py
servc/cli/commands/init/template_poetry/src/domains/: health.py
servc/com/: service.py
servc/com/bus/: __init__.py
servc/com/cache/: __init__.py  redis.py
servc/com/consumer/: __init__.py
servc/config/: __init__.py
servc/io/: input.py  output.py  response.py
servc/svc/: __init__.py
tests/: __init__.py  test_com_bus_rabbitmq.py  test_com_cache_redis.py  test_com_consumer.py  test_complete.py  test_config.py  test_delta.py  test_iceberg.py  test_io_idgenerator.py  test_io_response.py  test_parallelize.py  test_rabbitmq.py  test_redis.py  test_server.py  test_upload.py
tests/hooks/: test_complete.py  test_parallelize.py
tests/lake/: test_iceberg.py
tests/svc/: test_config.py  test_idgen.py  test_rabbitmq.py  test_redis.py
(+48 files in other folders)
