[tool.poetry]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "6.0.2"
servc = "^1.11.11"
flask = "3.1.2"
redis = "6.4.0"
pika = "1.3.2"
simplejson = "3.20.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
